# equipment_recommender_rag

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: equipment_database_sample_output.csv
data/raw/: equipment_database_sample.csv
equipment_recommender_rag/embeddings/: create_embeddings.py  embed_file.py
equipment_recommender_rag/retrieval/: dense_retrieval.py
equipment_recommender_rag/utils/: highlighted_output.py
tests/: test_main.py
